multiple files upload and upload function

--- a/6.html
+++ b/6.html
@@ -3,7 +3,7 @@
 		<title></title>
 	</head>
 	<body>
-		<form action="c6.php" method="post" enctype="multipart/form-data">
+		<form action="c6-1.php" method="post" enctype="multipart/form-data">
 			<input type="file" name="slika[]" multiple/>
 			<button type="submit">Upload file</button>
 		</form>
